<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <!--<TextView
        android:id="@+id/TopHorizontalSpaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dip" />-->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/StartButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:background="#444444"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dip"
            android:padding="10dip"
            android:text="@string/accel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/accel_button_text_view"/>

        <ToggleButton
            android:id="@+id/StartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dip" />

        <TextView
            android:id="@+id/mic_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Microphone"
            android:layout_below="@id/accel_button_text_view"
            android:layout_alignLeft="@id/accel_button_text_view"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MicButton"
            android:layout_below="@id/StartButton"
            android:layout_alignLeft="@id/StartButton" />

        <TextView
            android:id="@+id/loc_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            android:layout_below="@id/MicButton"
            android:layout_alignLeft="@id/accel_button_text_view"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loc_button"
            android:layout_below="@id/MicButton"
            android:layout_alignLeft="@id/StartButton" />
    </RelativeLayout>



    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/StepsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/StartButtonLayout"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/steps"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/StepCountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/StatusLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal"
        android:padding="5dip"
        android:layout_below="@id/StepsLayout"
        android:layout_alignLeft="@id/StepsLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/activity"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/StatusLabel" />

        <TextView
            android:id="@+id/StatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold"
            android:textIsSelectable="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/AudioLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal"
        android:padding="5dip"
        android:layout_below="@id/StatusLayout"
        android:layout_alignLeft="@id/StatusLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/speech_status_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/AudioLabel" />

        <TextView
            android:id="@+id/statusSpeechView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="Location"
            android:layout_below="@id/AudioLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/loc_label" />

        <TextView
            android:id="@+id/loc_status_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/loc_label"
            android:layout_below="@id/statusSpeechView"
            android:padding="10dip"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textIsSelectable="true" />
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/AccelLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal"
        android:padding="5dip"
        android:layout_below="@+id/StatusLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp">

        <TextView
            android:id="@+id/XView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/x"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/AccelXView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/XView"
            android:padding="10dip"
            android:text="@string/nullvalue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/YView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/AccelXView"
            android:padding="10dip"
            android:text="@string/y"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/AccelYView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/YView"
            android:padding="10dip"
            android:text="@string/nullvalue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ZView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/AccelYView"
            android:padding="10dip"
            android:text="@string/z"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/AccelZView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/ZView"
            android:padding="10dip"
            android:text="@string/nullvalue"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/map_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AccelLayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Map"
            android:textSize="20sp"
            android:onClick="showMap"/>

    </RelativeLayout>




</RelativeLayout>